discussion/kv_engine/162993/162993_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Add PassiveStream always buffered mode

Add a DcpControl that can force consumer to always process
messages on the AUXIO task.

Change-Id: I7ead4aab778d881930049041986552462ad16b00

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-05 11:44:01.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-05 11:46:19.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40750/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40750/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15595/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15595/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23028/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2761/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14741/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2796/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2796/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13889/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13889/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15011/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15011/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13141/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16: error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
            log->warn("changing flow control buffer size:{}", result);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13141/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13141/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11929/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
